--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,6 @@
     @apply grid sm:grid-cols-2 gap-5;
   }
 
-
   /* searchform */
   .search-form {
     @apply max-w-3xl w-full min-h-[80px] bg-white border-[5px] border-black rounded-[80px] text-[24px] mt-8 px-5 flex flex-row items-center gap-5;
@@ -53,6 +52,19 @@
 
   .divider {
     @apply border-dotted bg-zinc-400 max-w-4xl my-10 mx-auto;
+  }
+
+  /* view */
+  .view-container {
+    @apply flex justify-end items-center mt-5 fixed bottom-3 right-3;
+  }
+
+  .view-text {
+    @apply font-medium text-[16px] bg-primary-100 px-4 py-2 rounded-lg capitalize;
+  }
+
+  .category-tag {
+    @apply font-medium text-[16px] bg-primary-100 px-4 py-2 rounded-full;
   }
 
   .pattern {
